--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -1,6 +1,6 @@
 <% if(productos){ %>
     <% productos.map((producto, index)=>{ %>
-        <div class="card " style="width: 15rem;margin: 40px 20px;box-shadow: 4px 4px 4px darkgray;">
+        <div class="card col-md-3" style="width: 15rem;margin: 40px 20px;box-shadow: 4px 4px 4px darkgray;">
             <img style="height:65% ;" src="<%= producto.thumbnail %>" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title text-center text-uppercase" >
