--- a/views/formulario.ejs
+++ b/views/formulario.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-dark" style="display:flex; justify-content: center;align-items: center;">
+<div class="container bg-dark" style="display:flex; justify-content: center;align-items: center;">
     <form action="/productos" method="post" style="margin:40px;color: aqua;">
         <label for="POST-name">Nombre:</label>
         <input id="POST-name" type="text" name="title" placeholder="Nombre del producto"/>
